mkl/src/imports/cblas/CBLAS.cs

//-----------------------------------------------------------------------------
// Copyright   :  (c) Chris Moore, 2019
// License     :  MIT
//-----------------------------------------------------------------------------
namespace Z0.Mkl
{
    using System;
    using System.Linq;
    using System.Reflection;
    using System.Diagnostics;    
    using System.Collections.Generic;
    using System.Runtime.CompilerServices;
    using System.Security;
    using System.Runtime.InteropServices;
    using static zfunc;

    using static MklCommon;

	[SuppressUnmanagedCodeSecurity]
    public static partial class CBLAS
    {
        const string CBlasDll = "z0-cblas-clib.dll";

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern double cblas_dcabs1(ref ComplexF64 z);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern float cblas_scabs1(ref ComplexF32 c);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern float cblas_sdoti(int N, ref float X, ref int indx, ref float Y);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern double cblas_ddoti(int N, ref double X, ref int indx, ref double Y);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cdotu_sub(int N, ref byte X, int incX, ref byte Y, int incY, ref byte dotu);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cdotui_sub(int N, ref byte X, ref int indx, ref byte Y, ref byte dotui);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cdotc_sub(int N, ref byte X, int incX, ref byte Y, int incY, ref byte dotc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cdotci_sub(int N, ref byte X, ref int indx, ref byte Y, ref byte dotui);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zdotu_sub(int N, ref ComplexF64 X, int incX, ref ComplexF64 Y, int incY, ref byte dotu);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zdotui_sub(int N, ref ComplexF64 X, ref int indx, ref ComplexF64 Y, ref byte dotui);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zdotc_sub(int N, ref ComplexF64 X, int incX, ref ComplexF64 Y, int incY, ref byte dotc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zdotci_sub(int N, ref ComplexF64 X, ref int indx, ref ComplexF64 Y, ref byte dotui);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sswap(int N, ref float X, int incX, ref float Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_scopy(int N, ref float X, int incX, ref float Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]        
        public static extern void cblas_saxpby(int N, float alpha, ref float X,int incX, float beta, ref float Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_saxpyi(int N, float alpha, ref float X,ref int indx, ref float Y);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sgthr(int N, ref float Y, ref float X, ref int indx);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sgthrz(int N, ref float Y, ref float X, ref int indx);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ssctr(int N, ref float X, ref int indx, ref float Y);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_srotg(ref float a, ref float b, ref float c, ref float s);

		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dswap(int N, ref double X, int incX, ref double Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dcopy(int N, ref double X, int incX, ref double Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]        
        public static extern void cblas_daxpby(int N, double alpha, ref double X, int incX, double beta, ref double Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]        
        public static extern void cblas_daxpyi(int N, double alpha, ref double X, ref int indx, ref double Y);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dgthr(int N, ref double Y, ref double X, ref int indx);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dgthrz(int N, ref double Y, ref double X, ref int indx);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dsctr(int N, ref double X, ref int indx, ref double Y);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_drotg(ref double a, ref double b, ref double c, ref double s);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cswap(int N, ref byte X, int incX, ref byte Y, int incY);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ccopy(int N, ref byte X, int incX, ref byte Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]        
        public static extern void cblas_caxpy(int N, ref byte alpha, ref byte X, int incX, ref byte Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]        
        public static extern void cblas_caxpby(int N, ref byte alpha, ref byte X, int incX, ref byte beta, ref byte Y, int incY);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_caxpyi(int N, ref byte alpha, ref byte X, ref int indx, ref byte Y);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgthr(int N, ref byte Y, ref byte X, ref int indx);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgthrz(int N, ref byte Y, ref byte X, ref int indx);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_csctr(int N, ref byte X, ref int indx, ref byte Y);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_crotg(ref byte a, ref byte b, ref float c, ref byte s);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zswap(int N, ref byte X, int incX, ref byte Y, int incY);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zcopy(int N, ref byte X, int incX, ref byte Y, int incY);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zaxpy(int N, ref byte alpha, ref byte X, int incX, ref byte Y, int incY);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zaxpby(int N, ref byte alpha, ref byte X, int incX, ref byte beta, ref byte Y, int incY);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zaxpyi(int N, ref byte alpha, ref byte X, ref int indx, ref byte Y);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgthr(int N, ref byte Y, ref byte X, ref int indx);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgthrz(int N, ref byte Y, ref byte X, ref int indx);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zsctr(int N, ref byte X, ref int indx, ref byte Y);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zrotg(ref byte a, ref byte b, ref double c, ref byte s);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_srotmg(ref float d1, ref float d2, ref float b1, float b2, ref float P);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_srot(int N, ref float X, int incX, ref float Y, int incY, float c, float s);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sroti(int N, ref float X, ref int indx, ref float Y, float c, float s);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_srotm(int N, ref float X, int incX,ref float Y, int incY, ref float P);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_drotmg(ref double d1, ref double d2, ref double b1, double b2, ref double P);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_drot(int N, ref double X, int incX, ref double Y, int incY, double c, double  s);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_drotm(int N, ref double X, int incX, ref double Y, int incY, ref double P);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_droti(int N, ref double X, ref int indx, ref double Y, double c, double s);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_csrot(int N, ref byte X, int incX, ref byte Y, int incY, float c, float s);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zdrot(int N, ref byte X, int incX, ref byte Y, int incY, double c, double  s);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sscal(int N, float alpha, ref float X, int incX);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dscal(int N, double alpha, ref double X, int incX);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cscal(int N, ref byte alpha, ref byte X, int incX);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zscal(int N, ref byte alpha, ref byte X, int incX);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_csscal(int N, float alpha, ref byte X, int incX);
		
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zdscal(int N, double alpha, ref byte X, int incX);
